# skill-agent

./: CLAUDE.md  README.md  mcp.json  name.txt  pyproject.toml  requirements.txt  test_frontend.sh
.claude/: settings.local.json
docs/: BUILTIN_TEAM_USAGE.md  DYNAMIC_AGENT.md  MCP_TEAM_AGENT_SUMMARY.md  MULTI_AGENT_DESIGN.md  MULTI_AGENT_USAGE.md  RUNCONTEXT_DESIGN.md  STREAMING.md
examples/: correct_team_usage.py  team_demo.py  team_with_mcp_demo.py  test_builtin_team.py  test_name_gold_direct.py  test_name_gold_team.py  test_team_session.py  verify_mcp_team.py
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/pages/: Chat.tsx  Debug.tsx
frontend/src/services/: agent.ts  api.ts  debug.ts  sse.ts
frontend/src/stores/: chatStore.ts  sessionStore.ts
frontend/src/types/: agent.ts  debug.ts  message.ts  session.ts
frontend/src/utils/: cn.ts  formatters.ts  storage.ts
src/fastapi_agent/: main.py
src/fastapi_agent/api/: deps.py
src/fastapi_agent/api/v1/: router.py
src/fastapi_agent/api/v1/endpoints/: agent.py  team.py  tools.py  trace.py
src/fastapi_agent/core/: agent.py  agent_logger.py  agent_team.py  builtin_teams.py  config.py  llm_client.py  run_context.py  run_log_storage.py  session.py  team.py  token_manager.py
src/fastapi_agent/schemas/: message.py  team.py
src/fastapi_agent/tools/: __init__.py  function_tool.py  note_tool.py  spawn_agent_tool.py
src/fastapi_agent/utils/: __init__.py  logger.py
tests/api/: test_stream.py
tests/core/: test_agent_team.py  test_agent_team_mcp.py  test_team.py
tests/integration/: test_real_task.py  test_spawn_agent.py  test_spawn_agent_live.py
tests/tools/: test_note_tool.py
